refactored the command executor to support future commands
also added the FilterCommand feature in preparation for the future implementation