@@ -1,15 +1,13 @@
 package io.github.aleksandarharalanov.chatguard.command.subcommand;
 
-import io.github.aleksandarharalanov.chatguard.ChatGuard;
-import io.github.aleksandarharalanov.chatguard.util.misc.AboutUtil;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
-import org.bukkit.command.CommandSender;
-
-import java.util.Arrays;
 import java.util.List;
 
-public final class AboutCommand implements CommandExecutor {
+import org.bukkit.command.CommandSender;
+
+import io.github.aleksandarharalanov.chatguard.ChatGuard;
+import io.github.aleksandarharalanov.chatguard.util.misc.AboutUtil;
+
+public final class AboutCommand implements IChatGuardSubCommand {
 
     private final ChatGuard plugin;
 
@@ -18,11 +16,10 @@ public final class AboutCommand implements CommandExecutor {
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(CommandSender sender, String[] args) {
         // Contributors: If you've contributed code, you can add your name here to be credited.
-        List<String> contributors = Arrays.asList(
-                "moderator_man", "zavdav", "RitzKid76"
-        );
+        List<String> contributors = List.of();
+
         AboutUtil.aboutPlugin(sender, plugin, contributors);
         return true;
     }
